--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,12 @@
 /* TODO inserir outros breakpoints */
 @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+@import url("./color.css");
 html{
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0;
     padding: 0;
-    color: white;
     background-color: #c700c7ff;
 }
 
@@ -40,7 +40,6 @@ header div div a:hover {
 
 nav {
     display: none;
-    margin-right: 8vw;
 }
 
 nav ul {
@@ -117,6 +116,22 @@ main section p{
     border-radius: 37vw;
 }
 
+.girl-inner-circle {
+    display: flex;
+    position: relative;
+    top: 20%;
+    background-color: #804401ff;
+    justify-content: center;
+    width: 54vw;
+    height: 54vw;
+    border-radius: 37vw;
+}
+
+.girl-inner-circle img {
+    position: relative;
+    top: -20%;
+}
+
 .view-portfolio {
     display: flex;
     align-items: center;
@@ -137,9 +152,9 @@ a {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 16px;
-    color: white;
     text-decoration: none;
 }
+
 @media screen and (min-width: 360px) {
     body {
        height: unset;  
@@ -158,8 +173,8 @@ a {
     }
 
     body {
-        width: 1080px;
-        height: 60vh;
+        width: 80%;
+        height: 80vh;
         background-color: #800080ff;
     }
 
@@ -185,23 +200,54 @@ a {
     }
     
     main section {
+        padding-top: 10%;
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
     }
     .girl-circle{
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        max-height: 350px;
+        max-width: 350px;
+        min-height: 350px;
+        min-width: 350px;
+        border-radius: 175px;
+        margin-right: 40px;
+    }
+
+    .girl-inner-circle {
+        max-height: 256px;
+        max-width: 256px;
+        min-height: 256px;
+        min-width:256px;
+        border-radius: 128px;
+    }
+
+    .girl-inner-circle img {
+        height: 389px;
+    }
+}
+
+@media screen and (min-width: 1260px){
+    .girl-circle{
         max-height: 450px;
         max-width: 450px;
         min-height: 450px;
         min-width: 450px;
         border-radius: 225px;
-        margin-right: 40px;
     }
 
-    main section img {
+    .girl-inner-circle {
+        max-height: 328px;
+        max-width: 328px;
+        min-height: 328px;
+        min-width: 328px;
+        border-radius: 164px;
+    }
+
+    .girl-inner-circle img {
         height: 500px;
+    }
+    main section {
+        padding-top: 5%;
     }
 }
