--- a/css/index.css
+++ b/css/index.css
@@ -8,21 +8,45 @@ html{
     margin: 0;
     padding: 0;
     background-color: #c700c7ff;
+    background-image: url("../img/fundo.png");
 }
 
 
 body {
+    
     margin: 6vw 6vw;
     padding: 0;
     background-color: #800080ff;
     border-radius: 30px;
     height: 92vh;
+    z-index: 0;
+    overflow: clip;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.363);
+}
+
+.barra-brilho {
+    background: linear-gradient(0deg, rgba(128, 0, 128, 0) , rgba(255, 255, 255, 0.137), rgba(128, 0, 128, 0));
+    width: 100%;
+    height: 240px;
+    border-radius: 30px;
+    position: relative;
+    top: 0%;
+    z-index: -2;
+    animation: 1.5s infinite barra-brilho-movimento;
+}
+
+@keyframes barra-brilho-movimento {
+    000% {top: -120px;}
+    100% {top: calc(98vh - 240px);}
 }
 
 header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: -1;
+    position: relative;
+    top: -240px;
 }
 
 header div div img{
@@ -76,6 +100,9 @@ main section {
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
+    position: relative;
+    top: -240px;
+    z-index: -1;
 }
 
 main section h1{
@@ -114,7 +141,18 @@ main section p{
     width: 74vw;
     height: 74vw;
     border-radius: 37vw;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.363);
+    animation: 0.8s infinite alternate pulsacao-circle;
 }
+
+/* @keyframes pulsacao-circle {
+    000% {width: 74vw;
+        height: 74vw;
+        border-radius: 37vw;}
+   100% {width: 88vw;
+        height: 88vw;
+        border-radius: 44vw;}    
+} */
 
 .girl-inner-circle {
     display: flex;
@@ -124,8 +162,18 @@ main section p{
     justify-content: center;
     width: 54vw;
     height: 54vw;
-    border-radius: 37vw;
+    border-radius: 26vw;
+    animation: 0.8s infinite alternate pulsacao-inner-circle;
 }
+
+/* @keyframes pulsacao-inner-circle {
+    000% {width: 54vw;
+         height: 54vw;
+         border-radius: 26vw;}
+    100% {width: 64vw;
+         height: 64vw;
+         border-radius: 32vw;}
+} */
 
 .girl-inner-circle img {
     position: relative;
