--- a/css/index.css
+++ b/css/index.css
@@ -4,49 +4,45 @@
 html{
     display: flex;
     justify-content: center;
-    align-items: center;
     margin: 0;
     padding: 0;
+    width: 100%;
     background-color: #c700c7ff;
     background-image: url("../img/fundo.png");
 }
 
 
 body {
-    
     margin: 6vw 6vw;
-    padding: 0;
+    padding: 20px;
     background-color: #800080ff;
     border-radius: 30px;
-    max-height: 92vh;
     z-index: 0;
-    overflow: clip;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.363);
 }
 
-.barra-brilho {
+/* .barra-brilho {
     background: linear-gradient(0deg, rgba(128, 0, 128, 0) , rgba(255, 255, 255, 0.137), rgba(128, 0, 128, 0));
     width: 100%;
     height: 240px;
     border-radius: 30px;
     position: relative;
     top: 0%;
-    z-index: -2;
+    z-index: -3;
     animation: 1.5s infinite barra-brilho-movimento;
 }
 
 @keyframes barra-brilho-movimento {
     000% {top: -120px;}
     100% {top: calc(98vh - 240px);}
-}
+} */
 
 header {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     z-index: -1;
-    position: relative;
-    top: -240px;
 }
 
 header div div img{
@@ -63,24 +59,30 @@ header div div a:hover {
 }
 
 nav {
+
     display: none;
+    width: 100%;
 }
 
 nav ul {
-    list-style-type: none;
     display: flex;
     flex-direction: column;
-    width: 260px;
-    
+    justify-content: center;
+    align-items: center;
+    list-style-type: none;
+    width: calc(100% - 40px); 
 }
 
 nav ul li {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    right: 4vw;
+    height: 30px;
+    width: 260px;
     margin-bottom: 6px;
-    padding: 6px;
-    border-radius: 20px;
+    border-radius: 15px;
     background-color: #808000ff;
     border-color: #800000ff;
     border-style: solid;
@@ -100,8 +102,6 @@ main section {
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
-    position: relative;
-    top: -240px;
     z-index: -1;
 }
 
@@ -136,7 +136,9 @@ main section p{
     display: flex;
     background-color: #800000ff;
     justify-content: center;
-    margin: 10px auto;
+    align-items: center;
+    margin: 0 auto;
+    margin-bottom: 5vw;
     width: 74vw;
     height: 74vw;
     border-radius: 37vw;
@@ -144,25 +146,20 @@ main section p{
     animation: 0.8s infinite alternate pulsacao-circle;
 }
 
-/* @keyframes pulsacao-circle {
-    000% {width: 74vw;
-        height: 74vw;
-        border-radius: 37vw;}
-   100% {width: 88vw;
-        height: 88vw;
-        border-radius: 44vw;}    
-} */
-
 .girl-inner-circle {
-    display: flex;
-    position: relative;
-    top: 20%;
     background-color: #804401ff;
     justify-content: center;
+    position: relative;
+    top: 5%;
     width: 54vw;
     height: 54vw;
     border-radius: 26vw;
     animation: 0.8s infinite alternate pulsacao-inner-circle;
+}
+
+.girl-inner-circle img {
+    position: relative;
+    top: -20%;
 }
 
 /* @keyframes pulsacao-inner-circle {
@@ -173,11 +170,6 @@ main section p{
          height: 64vw;
          border-radius: 32vw;}
 } */
-
-.girl-inner-circle img {
-    position: relative;
-    top: -20%;
-}
 
 .view-portfolio {
     display: flex;
@@ -201,31 +193,11 @@ a {
     font-size: 16px;
     text-decoration: none;
 }
-
-/* @media screen and (min-width: 360px) {
-
-    .girl-circle{
-        max-height: 300px;
-        max-width: 300px;
-        min-height: 300px;
-        min-width: 300px;
-        border-radius: 150px;
-        margin-right: 40px;
+@media screen and (min-width: 380px) {
+    body {
+        min-height: calc(100vh - 20vw);
     }
-
-    .girl-inner-circle {
-        max-height: 186px;
-        max-width: 186px;
-        min-height: 186px;
-        min-width: 186px;
-        border-radius: 93px;
-    }
-
-    .girl-inner-circle img {
-        height: 283px;
-    }
-} */
-
+}
 @media screen and (min-width: 900px){
     html {
         width: 100%;
@@ -238,6 +210,7 @@ a {
     }
 
     body {
+        margin: auto;
         width: 80%;
         height: 80vh;
         background-color: #800080ff;
@@ -255,16 +228,20 @@ a {
         border-style: none;
         background-color: unset;
     }
+    
+    nav ul {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+    }
+
     nav ul li {
         background-color: unset;
         border-color: unset;
         border-style: unset;
         border-width: unset;
-    }
-
-    nav ul {
-        display: flex;
-        flex-direction: row;
+        width: unset;
+        padding: 0 10px;
     }
 
     #sandwich{
